recycle local ship wreckage if no enemy forces are present.

--- a/SaveOurShipPatch/SaveOurShipPatch.csproj
+++ b/SaveOurShipPatch/SaveOurShipPatch.csproj
@@ -26,13 +26,12 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
+    <ErrorReport>none</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Command_DeconstructShipEnemy.cs" />
     <Compile Include="CompShipBaySalvageAdvanced.cs" />
     <Compile Include="Dialog_Recycle.cs" />
     <Compile Include="ModUtils.cs" />
