--- a/SaveOurShipPatch/SaveOurShipPatch.csproj
+++ b/SaveOurShipPatch/SaveOurShipPatch.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SaveOurShipPatch</RootNamespace>
     <AssemblyName>SaveOurShipPatch</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,23 +40,30 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="ShipsHaveInsides">
-      <HintPath>..\..\SaveOurShip2\1.5\Assemblies\ShipsHaveInsides.dll</HintPath>
-    </Reference>
-    <Reference Include="SmashTools">
-      <HintPath>..\..\Vehicle-Framework\1.5\Assemblies\SmashTools.dll</HintPath>
-    </Reference>
-    <Reference Include="Vehicles">
-      <HintPath>..\..\Vehicle-Framework\1.5\Assemblies\Vehicles.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.5.4104</Version>
+      <Version>1.6.4566</Version>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
-      <Version>2.3.3</Version>
+      <Version>2.4.1</Version>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\..\SaveOurShip2\1.6\Assemblies\ShipsHaveInsides.dll" />
+    <Analyzer Include="..\..\Vehicle-Framework\1.6\Assemblies\SmashTools.dll" />
+    <Analyzer Include="..\..\Vehicle-Framework\1.6\Assemblies\Vehicles.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="ShipsHaveInsides">
+      <HintPath>..\..\SaveOurShip2\1.6\Assemblies\ShipsHaveInsides.dll</HintPath>
+    </Reference>
+    <Reference Include="SmashTools">
+      <HintPath>..\..\Vehicle-Framework\1.6\Assemblies\SmashTools.dll</HintPath>
+    </Reference>
+    <Reference Include="Vehicles">
+      <HintPath>..\..\Vehicle-Framework\1.6\Assemblies\Vehicles.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
